[gd_scene load_steps=3 format=3 uid="uid://brehuqmjc4u6c"]

[ext_resource type="Script" path="res://Setup.gd" id="1_m860q"]

[sub_resource type="LabelSettings" id="LabelSettings_8hxfg"]
font_size = 24

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m860q")

[node name="VFlowContainer" type="VFlowContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -17.5
offset_right = 17.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VFlowContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Welcome! First, let's setup your App"
label_settings = SubResource("LabelSettings_8hxfg")

[node name="HostNameLabel" type="Label" parent="VFlowContainer"]
layout_mode = 2
text = "What's your Keskon-Mange server hostname ?"

[node name="HostNameEntry" type="TextEdit" parent="VFlowContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
placeholder_text = "Example.com"

[node name="UserNameLabel" type="Label" parent="VFlowContainer"]
layout_mode = 2
text = "How should we call you ?"

[node name="UserNameEntry" type="TextEdit" parent="VFlowContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="SubmitButton" type="Button" parent="VFlowContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Submit"

[node name="ErrorLabel" type="Label" parent="VFlowContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4

[connection signal="text_changed" from="VFlowContainer/HostNameEntry" to="." method="_on_user_name_entry_text_changed"]
[connection signal="text_changed" from="VFlowContainer/UserNameEntry" to="." method="_on_host_name_entry_text_changed"]
[connection signal="pressed" from="VFlowContainer/SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="draw" from="VFlowContainer/ErrorLabel" to="." method="_on_error_label_draw"]
